chore:fixed overflow hidden in clerk modal

--- a/app/globals.css
+++ b/app/globals.css
@@ -57,3 +57,7 @@
     @apply bg-background text-foreground;
   }
 }
+
+body {
+  overflow: visible !important;
+}
